--- a/Assignment no 1/home.html
+++ b/Assignment no 1/home.html
@@ -1,11 +1,17 @@
 <!DOCTYPE HTML>
 	<HTML>
 	<HEAD>
-		<TITLE> CREATING A HOME PAGE</TITLE>
+		<TITLE> HOME</TITLE>
+		<!--
+		NAME: FARHAN TAMBOLI
+		CLASS: BCA
+		COLLEGE: APIMR,LANDEWADI
+		-->
 	</HEAD>
 	<BODY>
+
 	<b> HOME</b>
-	<a href="gallary.html">GALLARY</a>
+	<a href="gallary.html">GALLARY</a> 
 	<a href="contact_me.html">CONTACTS</a>
 	<a href="blog.html">BLOG</a>
 	<a href="about_me.html">ABOUT</a><br><br>
