--- a/Assignment no 1/contact_me.html
+++ b/Assignment no 1/contact_me.html
@@ -1,7 +1,12 @@
 <!DOCTYPE HTML>
 	<HTML>
 	<HEAD>
-		<TITLE> CREATING A HOME PAGE</TITLE>
+		<TITLE> CONTACT</TITLE>
+		<!--
+		NAME: FARHAN TAMBOLI
+		CLASS: BCA
+		COLLEGE: APIMR,LANDEWADI
+		-->
 	</HEAD>
 	<BODY>
 	
