--- a/Assignment 5/Assignment5.html
+++ b/Assignment 5/Assignment5.html
@@ -266,7 +266,7 @@
      
 
       // Convert to numbers and add
-      let sum = Number(num1) - Number(num2);
+      let sum = Number(num1) + Number(num2);
 
       // Display result
       document.getElementById("result").value = sum;
