--- a/3179_Q1/3179_Q1.html
+++ b/3179_Q1/3179_Q1.html
@@ -10,16 +10,7 @@
 	<img src="download.jpg" alt="example image" align="left" width="200" height="200">
 			
 	<img src="images.jpg" alt="example image" align="right" width="200" height="200">
-	<p align="center"> This is my HTML web page which shows images at left and right.<br>
-						Which shows the greenary of the nature.<br>
-						Nature is everything around us that makes life possible and beautiful.<br>
-						It includes the air we breathe, the weather we feel, the plants, animals, and everything we see outside.<br>
-						We call it "Mother Nature" because, like a mother, it provides us with everything we need, such as food, clothes, and shelter.
-	
-		</p>
-	
-		
-		
-		
+	<p align="center"> This is my HTML web page which shows images at left and right.<br></p>
+							
 	</Body>
 	</html>	
